@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-20T16:23:54Z",
+  "timestamp" : "2022-09-21T08:27:00Z",
   "count_outdated" : 527,
   "uniques_outdated" : 305,
-  "count" : 561,
-  "uniques" : 323,
+  "count" : 562,
+  "uniques" : 324,
   "clones" : [
     {
       "timestamp": "2022-09-07T00:00:00Z",
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-09-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
