@@ -1,3 +1,11 @@
+2022-09-21T08:27:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3096279779
+* notice: last 14d: unq all: 5 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 305 527 / 323 561
+* notice: next accum: outdated-unq outdated-all / unq all: 305 527 / 324 562
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-21]
+
 2022-09-20T16:23:54Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3091768361
 * notice: last 14d: unq all: 5 34
